[package]
name = "cells"
version = "0.1.0"
authors = ["uzkbwza <uzkbwza@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "*"
rand = "*"
vecmap = { git = "https://github.com/uzkbwza/vecmap#master"}
